--- a/JS_Form_with_validation/index.html
+++ b/JS_Form_with_validation/index.html
@@ -20,15 +20,25 @@
         <input name="lastName" type="text">
       </td>
     </tr>
-    <!--<tr>
+    <tr>
       <td>Gender</td>
       <td>
-        <input name="gender" type="radio" value="male">
-         <label class="gender">male</label>
-         <input name="gender" type="radio" value="female">
-          <label class="gender">female</label>
+        <div name='Gender' class="gender">
+           <label for="male">Male</label>
+           <input type="radio" id="male" name="Gender">
+           <label for="female">Female</label>
+           <input type="radio" id="female" name="Gender">
+        </div>
       </td>
-    </tr>-->
+    </tr>
+
+    <tr>
+      <td>Birthday</td>
+      <td>
+        <input type="date" id="start" name="birthday" value="">
+      </td>
+    </tr>
+
     <tr>
       <td>Your password</td>
       <td>
